--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,27 @@ section {
 }
 
 /*-----*/
+/* MENU */
+.livrosMenu--content {
+	padding-top: 2em;
+	text-align: center;
+}
+.livrosMenu--btn {
+	border: 2px solid #1ab3ff;
+	border-radius: 2px;
+	color: #1ab3ff;
+	font-size: 20px;
+	font-weight: 600;		
+	margin: 0 1%;
+	padding: 7px 12px;
+	text-decoration: none;
+	transition: .5s;
+}
+.livrosMenu--btn:hover {
+	background-color: #1ab3ff;
+	color: #f1f1f1;
+}
+/*-----*/
 /*LIVRO*/
 
 .livro {
